// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CryptoWalletDetail /> fetch fail test 1`] = `
<View
  style={
    {
      "backgroundColor": "white",
      "flex": 1,
    }
  }
>
  <Text />
  <Text />
  <View
    style={
      {
        "paddingHorizontal": 30,
      }
    }
  >
    <Image
      style={
        {
          "height": 100,
          "width": 100,
        }
      }
    />
    <Text
      style={
        {
          "color": "black",
          "fontSize": 40,
          "fontWeight": "800",
        }
      }
    >
       Wallet
    </Text>
  </View>
  <View
    style={
      {
        "paddingHorizontal": 40,
        "paddingVertical": 20,
      }
    }
  >
    <View
      accessibilityLabel={null}
      style={
        [
          {
            "flexDirection": "row",
          },
          {},
        ]
      }
      testID={null}
    >
      <View
        onMoveShouldSetResponder={[Function]}
        onMoveShouldSetResponderCapture={[Function]}
        onResponderEnd={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderReject={[Function]}
        onResponderRelease={[Function]}
        onResponderStart={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        onStartShouldSetResponderCapture={[Function]}
        style={
          {
            "flex": 1,
          }
        }
      >
        <View
          onLayout={[Function]}
          style={
            {
              "backgroundColor": "#FFFFFF",
              "borderRadius": 50,
              "height": 47,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "borderColor": "#7a44cf",
                "borderRadius": 50,
                "borderWidth": 1,
                "flex": 1,
                "flexDirection": "row",
              }
            }
          >
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "alignItems": "center",
                  "flex": 1,
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "opacity": 1,
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "backgroundColor": "transparent",
                      "color": "#000000",
                      "fontSize": 14,
                      "fontWeight": "normal",
                      "textAlign": "center",
                    },
                    {
                      "fontSize": 15,
                      "fontWeight": "bold",
                    },
                  ]
                }
              >
                Breakdown
              </Text>
            </View>
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "alignItems": "center",
                  "flex": 1,
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "opacity": 1,
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "backgroundColor": "transparent",
                      "color": "#fff",
                      "fontSize": 14,
                      "fontWeight": "normal",
                      "textAlign": "center",
                    },
                    {},
                  ]
                }
              >
                Transactions
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      {
        "paddingHorizontal": 30,
      }
    }
  >
    <Text
      style={
        {
          "color": "black",
          "fontSize": 25,
          "fontWeight": "800",
          "paddingTop": 10,
        }
      }
    >
      Transactions
    </Text>
    <View
      style={
        [
          undefined,
          {
            "backgroundColor": "white",
          },
        ]
      }
    >
      <Text
        style={
          {
            "color": "black",
          }
        }
      >
        There are no transactions to display.
      </Text>
    </View>
  </View>
</View>
`;

exports[`<CryptoWalletDetail /> snapshot test 1`] = `
<View
  style={
    {
      "backgroundColor": "white",
      "flex": 1,
    }
  }
>
  <Text />
  <Text />
  <View
    style={
      {
        "paddingHorizontal": 30,
      }
    }
  >
    <Image
      style={
        {
          "height": 100,
          "width": 100,
        }
      }
    />
    <Text
      style={
        {
          "color": "black",
          "fontSize": 40,
          "fontWeight": "800",
        }
      }
    >
       Wallet
    </Text>
  </View>
  <View
    style={
      {
        "paddingHorizontal": 40,
        "paddingVertical": 20,
      }
    }
  >
    <View
      accessibilityLabel={null}
      style={
        [
          {
            "flexDirection": "row",
          },
          {},
        ]
      }
      testID={null}
    >
      <View
        onMoveShouldSetResponder={[Function]}
        onMoveShouldSetResponderCapture={[Function]}
        onResponderEnd={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderReject={[Function]}
        onResponderRelease={[Function]}
        onResponderStart={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        onStartShouldSetResponderCapture={[Function]}
        style={
          {
            "flex": 1,
          }
        }
      >
        <View
          onLayout={[Function]}
          style={
            {
              "backgroundColor": "#FFFFFF",
              "borderRadius": 50,
              "height": 47,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "borderColor": "#7a44cf",
                "borderRadius": 50,
                "borderWidth": 1,
                "flex": 1,
                "flexDirection": "row",
              }
            }
          >
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "alignItems": "center",
                  "flex": 1,
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "opacity": 1,
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "backgroundColor": "transparent",
                      "color": "#fff",
                      "fontSize": 14,
                      "fontWeight": "normal",
                      "textAlign": "center",
                    },
                    {},
                  ]
                }
              >
                Breakdown
              </Text>
            </View>
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "alignItems": "center",
                  "flex": 1,
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "opacity": 1,
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "backgroundColor": "transparent",
                      "color": "#000000",
                      "fontSize": 14,
                      "fontWeight": "normal",
                      "textAlign": "center",
                    },
                    {
                      "fontSize": 15,
                      "fontWeight": "bold",
                    },
                  ]
                }
              >
                Transactions
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
  <RCTScrollView>
    <View>
      <View
        style={
          {
            "paddingHorizontal": 30,
          }
        }
      >
        <Text
          style={
            {
              "color": "black",
              "fontSize": 25,
              "fontWeight": "800",
              "paddingTop": 10,
            }
          }
        >
          Breakdown
        </Text>
        <Text />
        <Text
          style={
            {
              "color": "black",
              "fontWeight": "700",
            }
          }
        >
          Address
        </Text>
        <Text
          style={
            {
              "color": "black",
            }
          }
        />
        <Text />
        <Text
          style={
            {
              "color": "black",
              "fontWeight": "700",
            }
          }
        >
          Balance
        </Text>
        <Text
          style={
            {
              "color": "black",
            }
          }
        >
           
        </Text>
        <Text />
        <Text
          style={
            {
              "color": "black",
              "fontWeight": "700",
            }
          }
        >
          Value
        </Text>
        <Text
          style={
            {
              "color": "black",
            }
          }
        >
          £
          50.05
        </Text>
        <Text />
        <Text
          style={
            {
              "color": "black",
              "fontWeight": "700",
            }
          }
        >
          Received
        </Text>
        <Text
          style={
            {
              "color": "black",
            }
          }
        >
           
        </Text>
        <Text />
        <Text
          style={
            {
              "color": "black",
              "fontWeight": "700",
            }
          }
        >
          Spent
        </Text>
        <Text
          style={
            {
              "color": "black",
            }
          }
        >
           
        </Text>
        <Text />
        <Text
          style={
            {
              "color": "black",
              "fontWeight": "700",
            }
          }
        >
          Output Count
        </Text>
        <Text
          style={
            {
              "color": "black",
            }
          }
        />
        <Text />
        <Text
          style={
            {
              "color": "black",
              "fontWeight": "700",
            }
          }
        >
          Unspent Output Count
        </Text>
        <Text
          style={
            {
              "color": "black",
            }
          }
        />
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "justifyContent": "center",
          }
        }
      >
        <View
          style={
            {
              "backgroundColor": "purple",
              "borderRadius": 5,
              "marginTop": 10,
              "padding": 10,
              "paddingHorizontal": 30,
            }
          }
        >
          <Text
            style={
              {
                "color": "black",
                "fontWeight": "800",
              }
            }
          >
            Remove
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          }
        }
      >
        <Modal
          animationType="slide"
          hardwareAccelerated={false}
          onRequestClose={[Function]}
          transparent={true}
          visible={false}
        />
      </View>
      <Text
        style={
          {
            "color": "black",
            "fontSize": 25,
            "fontWeight": "800",
            "paddingHorizontal": 30,
            "paddingTop": 10,
          }
        }
      >
        Balance History Graph
      </Text>
      <View>
        <Text
          style={
            {
              "color": "black",
              "paddingHorizontal": 30,
            }
          }
        >
          Not enough data to display graph.
        </Text>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`<CryptoWalletDetail /> snapshot test 2`] = `
<View
  style={
    {
      "backgroundColor": "white",
      "flex": 1,
    }
  }
>
  <Text />
  <Text />
  <View
    style={
      {
        "paddingHorizontal": 30,
      }
    }
  >
    <Image
      source={1}
      style={
        {
          "height": 100,
          "width": 100,
        }
      }
    />
    <Text
      style={
        {
          "color": "black",
          "fontSize": 40,
          "fontWeight": "800",
        }
      }
    >
      Bitcoin
       Wallet
    </Text>
  </View>
  <View
    style={
      {
        "paddingHorizontal": 40,
        "paddingVertical": 20,
      }
    }
  >
    <View
      accessibilityLabel={null}
      style={
        [
          {
            "flexDirection": "row",
          },
          {},
        ]
      }
      testID={null}
    >
      <View
        onMoveShouldSetResponder={[Function]}
        onMoveShouldSetResponderCapture={[Function]}
        onResponderEnd={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderReject={[Function]}
        onResponderRelease={[Function]}
        onResponderStart={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        onStartShouldSetResponderCapture={[Function]}
        style={
          {
            "flex": 1,
          }
        }
      >
        <View
          onLayout={[Function]}
          style={
            {
              "backgroundColor": "#FFFFFF",
              "borderRadius": 50,
              "height": 47,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "borderColor": "#7a44cf",
                "borderRadius": 50,
                "borderWidth": 1,
                "flex": 1,
                "flexDirection": "row",
              }
            }
          >
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "alignItems": "center",
                  "flex": 1,
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "opacity": 1,
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "backgroundColor": "transparent",
                      "color": "#fff",
                      "fontSize": 14,
                      "fontWeight": "normal",
                      "textAlign": "center",
                    },
                    {},
                  ]
                }
              >
                Breakdown
              </Text>
            </View>
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "alignItems": "center",
                  "flex": 1,
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "opacity": 1,
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "backgroundColor": "transparent",
                      "color": "#000000",
                      "fontSize": 14,
                      "fontWeight": "normal",
                      "textAlign": "center",
                    },
                    {
                      "fontSize": 15,
                      "fontWeight": "bold",
                    },
                  ]
                }
              >
                Transactions
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
  <RCTScrollView>
    <View>
      <View
        style={
          {
            "paddingHorizontal": 30,
          }
        }
      >
        <Text
          style={
            {
              "color": "black",
              "fontSize": 25,
              "fontWeight": "800",
              "paddingTop": 10,
            }
          }
        >
          Breakdown
        </Text>
        <Text />
        <Text
          style={
            {
              "color": "black",
              "fontWeight": "700",
            }
          }
        >
          Address
        </Text>
        <Text
          style={
            {
              "color": "black",
            }
          }
        >
          1P5ZEDWTKTFGxQjZphgWPQUpe554WKDfHQ
        </Text>
        <Text />
        <Text
          style={
            {
              "color": "black",
              "fontWeight": "700",
            }
          }
        >
          Balance
        </Text>
        <Text
          style={
            {
              "color": "black",
            }
          }
        >
          0.01344898
           
          BTC
        </Text>
        <Text />
        <Text
          style={
            {
              "color": "black",
              "fontWeight": "700",
            }
          }
        >
          Value
        </Text>
        <Text
          style={
            {
              "color": "black",
            }
          }
        >
          £
          50.05
        </Text>
        <Text />
        <Text
          style={
            {
              "color": "black",
              "fontWeight": "700",
            }
          }
        >
          Received
        </Text>
        <Text
          style={
            {
              "color": "black",
            }
          }
        >
          241914.76880743
           
          BTC
        </Text>
        <Text />
        <Text
          style={
            {
              "color": "black",
              "fontWeight": "700",
            }
          }
        >
          Spent
        </Text>
        <Text
          style={
            {
              "color": "black",
            }
          }
        >
          241914.75535845
           
          BTC
        </Text>
        <Text />
        <Text
          style={
            {
              "color": "black",
              "fontWeight": "700",
            }
          }
        >
          Output Count
        </Text>
        <Text
          style={
            {
              "color": "black",
            }
          }
        >
          847
        </Text>
        <Text />
        <Text
          style={
            {
              "color": "black",
              "fontWeight": "700",
            }
          }
        >
          Unspent Output Count
        </Text>
        <Text
          style={
            {
              "color": "black",
            }
          }
        >
          267
        </Text>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "justifyContent": "center",
          }
        }
      >
        <View
          style={
            {
              "backgroundColor": "purple",
              "borderRadius": 5,
              "marginTop": 10,
              "padding": 10,
              "paddingHorizontal": 30,
            }
          }
        >
          <Text
            style={
              {
                "color": "black",
                "fontWeight": "800",
              }
            }
          >
            Remove
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          }
        }
      >
        <Modal
          animationType="slide"
          hardwareAccelerated={false}
          onRequestClose={[Function]}
          transparent={true}
          visible={true}
        >
          <View
            style={
              {
                "alignItems": "center",
                "backgroundColor": "white",
                "borderBottomColor": "gray",
                "borderBottomWidth": 1,
                "borderRadius": 20,
                "elevation": 5,
                "marginHorizontal": 20,
                "marginVertical": "20%",
                "padding": 40,
                "shadowColor": "#000",
                "shadowOffset": {
                  "height": 2,
                  "width": 0,
                },
                "shadowOpacity": 0.25,
                "shadowRadius": 4,
              }
            }
          >
            <Text
              style={
                {
                  "color": "black",
                  "fontSize": 22,
                  "fontWeight": "bold",
                  "marginBottom": 10,
                }
              }
            >
              Remove Your Wallet
            </Text>
            <View
              style={
                {
                  "backgroundColor": "lightgray",
                  "height": 1,
                  "marginVertical": 10,
                  "width": "100%",
                }
              }
            />
            <Text
              style={
                {
                  "color": "black",
                  "fontSize": 18,
                  "marginVertical": 15,
                  "textAlign": "center",
                }
              }
            >
              Are you sure you want to remove your wallet account?
            </Text>
            <View
              style={
                {
                  "backgroundColor": "lightgray",
                  "height": 1,
                  "marginVertical": 10,
                  "width": "100%",
                }
              }
            />
            <View
              style={
                {
                  "alignItems": "flex-end",
                  "flexDirection": "row",
                  "justifyContent": "space-around",
                  "marginTop": 20,
                  "width": "100%",
                }
              }
            >
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  [
                    {
                      "borderRadius": 10,
                      "paddingHorizontal": 20,
                      "paddingVertical": 10,
                    },
                    {
                      "backgroundColor": "#f44336",
                    },
                  ]
                }
                testID="pressable1"
              >
                <Text
                  style={
                    {
                      "color": "white",
                      "fontSize": 18,
                      "fontWeight": "bold",
                    }
                  }
                >
                  Yes
                </Text>
              </View>
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  [
                    {
                      "borderRadius": 10,
                      "paddingHorizontal": 20,
                      "paddingVertical": 10,
                    },
                    {
                      "backgroundColor": "#1E90FF",
                    },
                  ]
                }
                testID="pressable2"
              >
                <Text
                  style={
                    {
                      "color": "white",
                      "fontSize": 18,
                      "fontWeight": "bold",
                    }
                  }
                >
                  No
                </Text>
              </View>
            </View>
          </View>
        </Modal>
      </View>
      <Text
        style={
          {
            "color": "black",
            "fontSize": 25,
            "fontWeight": "800",
            "paddingHorizontal": 30,
            "paddingTop": 10,
          }
        }
      >
        Balance History Graph
      </Text>
      <View>
        <View
          style={
            [
              undefined,
              {
                "backgroundColor": "white",
                "paddingBottom": 30,
              },
            ]
          }
        >
          <View
            style={
              {
                "padding": 15,
                "paddingHorizontal": 45,
              }
            }
          >
            <View
              accessibilityLabel={null}
              style={
                [
                  {
                    "flexDirection": "row",
                  },
                  {},
                ]
              }
              testID={null}
            >
              <View
                onMoveShouldSetResponder={[Function]}
                onMoveShouldSetResponderCapture={[Function]}
                onResponderEnd={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderReject={[Function]}
                onResponderRelease={[Function]}
                onResponderStart={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                onStartShouldSetResponderCapture={[Function]}
                style={
                  {
                    "flex": 1,
                  }
                }
              >
                <View
                  onLayout={[Function]}
                  style={
                    {
                      "backgroundColor": "#FFFFFF",
                      "borderRadius": 50,
                      "height": 40,
                    }
                  }
                >
                  <View
                    style={
                      {
                        "alignItems": "center",
                        "borderColor": "#7a44cf",
                        "borderRadius": 50,
                        "borderWidth": 1,
                        "flex": 1,
                        "flexDirection": "row",
                      }
                    }
                  >
                    <View
                      accessibilityState={
                        {
                          "busy": undefined,
                          "checked": undefined,
                          "disabled": undefined,
                          "expanded": undefined,
                          "selected": undefined,
                        }
                      }
                      accessibilityValue={
                        {
                          "max": undefined,
                          "min": undefined,
                          "now": undefined,
                          "text": undefined,
                        }
                      }
                      accessible={true}
                      collapsable={false}
                      focusable={true}
                      onClick={[Function]}
                      onResponderGrant={[Function]}
                      onResponderMove={[Function]}
                      onResponderRelease={[Function]}
                      onResponderTerminate={[Function]}
                      onResponderTerminationRequest={[Function]}
                      onStartShouldSetResponder={[Function]}
                      style={
                        {
                          "alignItems": "center",
                          "flex": 1,
                          "flexDirection": "row",
                          "justifyContent": "center",
                          "opacity": 1,
                        }
                      }
                    >
                      <Text
                        style={
                          [
                            {
                              "backgroundColor": "transparent",
                              "color": "#fff",
                              "fontSize": 14,
                              "fontWeight": "normal",
                              "textAlign": "center",
                            },
                            {},
                          ]
                        }
                      >
                        Line Chart
                      </Text>
                    </View>
                    <View
                      accessibilityState={
                        {
                          "busy": undefined,
                          "checked": undefined,
                          "disabled": undefined,
                          "expanded": undefined,
                          "selected": undefined,
                        }
                      }
                      accessibilityValue={
                        {
                          "max": undefined,
                          "min": undefined,
                          "now": undefined,
                          "text": undefined,
                        }
                      }
                      accessible={true}
                      collapsable={false}
                      focusable={true}
                      onClick={[Function]}
                      onResponderGrant={[Function]}
                      onResponderMove={[Function]}
                      onResponderRelease={[Function]}
                      onResponderTerminate={[Function]}
                      onResponderTerminationRequest={[Function]}
                      onStartShouldSetResponder={[Function]}
                      style={
                        {
                          "alignItems": "center",
                          "flex": 1,
                          "flexDirection": "row",
                          "justifyContent": "center",
                          "opacity": 1,
                        }
                      }
                    >
                      <Text
                        style={
                          [
                            {
                              "backgroundColor": "transparent",
                              "color": "#000000",
                              "fontSize": 14,
                              "fontWeight": "normal",
                              "textAlign": "center",
                            },
                            {
                              "fontWeight": "bold",
                            },
                          ]
                        }
                      >
                        Candlestick Chart
                      </Text>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
          <View>
            <View
              style={
                {
                  "flexDirection": "row",
                  "paddingBottom": 14,
                  "paddingHorizontal": 10,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "green",
                    "fontSize": 14,
                    "fontWeight": "bold",
                  }
                }
              >
                +0.001
              </Text>
              <Text
                style={
                  {
                    "color": "green",
                    "fontSize": 14,
                    "fontWeight": "bold",
                  }
                }
              >
                 (
                +5.85
                %)
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;
